<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
    android:id="@+id/fragment_crime_image_view"
    android:layout_width="80dp"
    android:layout_height="80dp"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/crime_detail_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/fragment_crime_image_view"/>

    <CheckBox
        android:id="@+id/crime_solve_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_solved_label"
        android:layout_below="@+id/crime_date_btn"
        android:layout_alignLeft="@+id/crime_suspect"
        android:layout_alignStart="@+id/crime_suspect" />

    <Button
        android:id="@+id/crime_suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_suspect_text"
        android:layout_below="@id/crime_solve_checkbox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/crime_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_report_text"
        android:layout_below="@id/crime_suspect"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/crime_date_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_crime_image_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <EditText
        android:id="@+id/crime_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crime_title_hint"
        android:layout_below="@+id/crime_detail_label"
        android:layout_toRightOf="@+id/fragment_crime_image_view"
        android:layout_toEndOf="@+id/fragment_crime_image_view" />

    <TextView
        android:id="@+id/crime_title_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/fragment_crime_image_view"
        android:layout_toEndOf="@+id/fragment_crime_image_view" />

    <ImageButton
        android:id="@+id/fragment_crime_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_below="@+id/fragment_crime_image_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/fragment_crime_image_view"
        android:layout_alignEnd="@+id/fragment_crime_image_view" />


</RelativeLayout>